# web-reputational-analysis

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  config.py  google_collector.py  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
collectors/: __init__.py  ansa_collector.py  base.py  bbc_collector.py  bluesky_collector.py  brave_collector.py  gdelt_collector.py  gnews_it_collector.py  guardian_collector.py  hackernews_collector.py  lemmy_collector.py  mastodon_collector.py  news_collector.py  nyt_collector.py  reddit_collector.py  retry.py  stackexchange_collector.py  wikipedia_collector.py  wikitalk_collector.py  youtube_collector.py  youtube_comments_collector.py
exporters/: __init__.py  json_exporter.py  summary_json_exporter.py
models/: record.py
normalizers/: __init__.py  ansa.py  bbc.py  bluesky.py  brave.py  gdelt.py  gnews_it.py  guardian.py  hackernews.py  lemmy.py  mastodon.py  news.py  nyt.py  reddit.py  registry.py  stackexchange.py  utils.py  wikipedia.py  wikitalk.py  youtube.py  youtube_comments.py
pipeline/: __init__.py  aggregator.py  cleaner.py  date_filter.py  deduplicator.py  enricher.py  language_filter.py  normalizer.py  runner.py
processors/: cleaner.py  deduplicator.py  normalizer.py  validator.py
storage/: __init__.py  raw_store.py
tests/: test_aggregator.py  test_bluesky_collector.py  test_cleaner.py  test_collector.py  test_date_filter.py  test_deduplicator.py  test_enricher.py  test_exporters.py  test_gdelt_collector.py  test_language_filter.py  test_lemmy_collector.py  test_main_cli.py  test_mastodon_collector.py  test_normalizer.py  test_pipeline_e2e.py  test_raw_store.py  test_reddit_collector.py  test_retry.py  test_runner.py  test_slugify.py  test_summary_json_exporter.py  test_wikitalk_collector.py
utils/: __init__.py  logging_config.py  slugify.py
web_reputational_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wiki/: Architettura.md  Collectors.md  Configurazione.md  Home.md  Installazione.md  Schema-Dati.md  Utilizzo.md
