[project]
name = "web-reputational-analysis"
version = "0.1.0"
description = "Pipeline per la raccolta, normalizzazione ed esportazione di dati da fonti web per web reputational analysis."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "Wikipedia-API>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
wra = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
# Aggiunge la root del progetto a sys.path: evita sys.path.insert in main.py
# e permette ai test di importare i moduli direttamente.
pythonpath = ["."]
testpaths  = ["tests"]
